--- a/discoveryServer/pom.xml
+++ b/discoveryServer/pom.xml
@@ -24,8 +24,11 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-netflix-eureka-server</artifactId>
-            <version>4.0.1</version>
         </dependency>
     </dependencies>
 </project>
