--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/product-service
+ci2.srvhost = localhost
+spring.cloud.client.hostname=${ci2.svrhost}
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.application.name=product-service
