add in spring cloud gateway

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,8 @@
 		<module>orderService</module>
 		<module>inventoryServices</module>
 		<module>discoveryServer</module>
-	</modules>
+        <module>APIGateway</module>
+    </modules>
     <properties>
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
