--- a/APIGateway/src/main/resources/application.properties
+++ b/APIGateway/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=api-gateway
-server.port=8080
+server.port=8181
 
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
@@ -10,6 +10,7 @@ logging.level.org.springframework.cloud.gateway=TRACE
 spring.cloud.gateway.routes[0].id=product-service
 spring.cloud.gateway.routes[0].uri=lb://product-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/product
+spring.cloud.gateway.routes[0].predicates[1]=Query=skucode
 
 ##order service route
 spring.cloud.gateway.routes[1].id=order-service
@@ -21,5 +22,13 @@ spring.cloud.gateway.routes[2].id=inventory-service
 spring.cloud.gateway.routes[2].uri=lb://inventory-service
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/inventory
 
+#Discovery Server Route
+spring.cloud.gateway.routes[3].id=eureka-server
+spring.cloud.gateway.routes[3].uri=http://localhost:8761
+spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/microservices-api
+
+logging.level.org.springframework.web.HttpLogging=TRACE
 
 
