--- a/discoveryServer/src/main/resources/application.properties
+++ b/discoveryServer/src/main/resources/application.properties
@@ -3,3 +3,8 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 server.port=8761
 
+spring.security.user.name=eureka
+spring.security.user.password=password
+
+logging.level.com.netflix.eureka=INFO
+
