--- a/inventoryServices/src/main/resources/application.properties
+++ b/inventoryServices/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.password=UFj63v6n
 spring.jpa.hibernate.ddl-auto=update
 
 server.port=8083
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.enabled=true
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 spring.application.name=inventory-service
