--- a/orderService/pom.xml
+++ b/orderService/pom.xml
@@ -53,6 +53,14 @@
             <artifactId>spring-webflux</artifactId>
             <version>6.0.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-circuitbreaker-reactor-resilience4j</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
