--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/product-service
-ci2.srvhost = localhost
-spring.cloud.client.hostname=${ci2.svrhost}
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 spring.application.name=product-service
 server.port=8085
+eureka.client.enabled=true
+logging.level.com.netflix.client=INFO
