--- a/orderService/src/main/resources/application.properties
+++ b/orderService/src/main/resources/application.properties
@@ -27,3 +27,9 @@ resilience4j.timelimiter.instances.inventory.timeout-duration=2s
 
 resilience4j.retry.instances.inventory.max-attempts=3
 resilience4j.retry.instances.inventory.wait-duration=4s
+
+#Kafka Properties
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.template.default-topic=notificationTopic
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
