--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,8 @@
 		<module>inventoryServices</module>
 		<module>discoveryServer</module>
         <module>APIGateway</module>
-    </modules>
+		<module>notificationService</module>
+	</modules>
     <properties>
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
@@ -58,6 +59,11 @@
 			<artifactId>spring-boot</artifactId>
 			<version>3.0.5</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>3.0.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
