--- a/AuthenticationServer/src/main/resources/application.properties
+++ b/AuthenticationServer/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/product-service
+spring.data.mongodb.uri=mongodb://localhost:27017/user-service
+server.port=8900
+
+access-token.private=${ACCESS_TOKEN_PRIVATE_KEY_PATH}
+access-token.public=${ACCESS_TOKEN_PUBLIC_KEY_PATH}
+
+refresh-token.private=${REFRESH_TOKEN_PRIVATE_KEY_PATH}
+refresh-token.public=${REFRESH_TOKEN_PUBLIC_KEY_PATH}
+spring.profiles.active=dev
+logging.level.org.springframework.web: DEBUG
