add in rabbit mq conusmer and producer

--- a/APIGateway/src/main/resources/application.properties
+++ b/APIGateway/src/main/resources/application.properties
@@ -27,7 +27,12 @@ spring.cloud.gateway.routes[3].id=eureka-server
 spring.cloud.gateway.routes[3].uri=http://localhost:8761
 spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/microservices-api
+#Authentication server
+spring.cloud.gateway.routes[4].id=auth-server
+spring.cloud.gateway.routes[4].uri=http://localhost:8900
+spring.cloud.gateway.routes[4].predicates[0]=Path=/api/auth/login
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8900/api/auth/token
 
 logging.level.org.springframework.web.HttpLogging=TRACE
 
