--- a/AuthenticationServer/src/main/resources/application.properties
+++ b/AuthenticationServer/src/main/resources/application.properties
@@ -8,3 +8,8 @@ refresh-token.private=${REFRESH_TOKEN_PRIVATE_KEY_PATH}
 refresh-token.public=${REFRESH_TOKEN_PUBLIC_KEY_PATH}
 spring.profiles.active=dev
 logging.level.org.springframework.web: DEBUG
+
+spring.application.name=auth-server
+
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
+eureka.client.enabled=true
