--- a/orderService/src/main/resources/application.properties
+++ b/orderService/src/main/resources/application.properties
@@ -9,6 +9,15 @@ eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eurek
 spring.application.name=order-service
 eureka.client.enabled=true
 
+#RabbitMQ config
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+rabbitmq.queue.name=orderQueue
+rabbitmq.queue.exchange_name=orderQueue_exchange
+rabbitmq.queue.routing_key=orderExchange_routing_key
+
 management.health.circuitbreakers.enabled=true
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
